zia0/rules.v4
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A FORWARD -d 10.70.123.20/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 10.70.123.20/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -d 10.70.124.77/32 -p tcp -m tcp --dport 8065 -j ACCEPT
-A FORWARD -d 10.70.124.77/32 -p udp -m udp --dport 8443 -j ACCEPT
-A FORWARD -d 10.70.124.77/32 -p tcp -m tcp --dport 8443 -j ACCEPT
-A FORWARD -s 10.70.124.77/32 -j ACCEPT
-A FORWARD -d 10.70.123.50/32 -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i wg0 -p tcp -m tcp --dport 22 -j DNAT --to-destination 10.70.123.20:22
-A PREROUTING -p tcp -m tcp --dport 2222 -j DNAT --to-destination 10.70.123.20:22
-A PREROUTING -p tcp -m tcp --dport 2223 -j DNAT --to-destination 10.70.123.50:22
-A PREROUTING -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.70.123.20:80
-A PREROUTING -d 192.168.10.100/32 -p tcp -m tcp --dport 8065 -j DNAT --to-destination 10.70.124.77:8065
-A PREROUTING -d 10.10.0.2/32 -p udp -m udp --dport 8443 -j DNAT --to-destination 10.70.124.77:8443
-A PREROUTING -d 10.10.0.2/32 -p tcp -m tcp --dport 8443 -j DNAT --to-destination 10.70.124.77:8443
-A PREROUTING -d 10.10.0.2/32 -p tcp -m tcp --dport 8065 -j DNAT --to-destination 10.70.124.77:8065
-A POSTROUTING -d 10.70.124.77/32 -p tcp -m tcp --dport 8065 -j MASQUERADE
-A POSTROUTING -d 10.70.124.77/32 -p udp -m udp --dport 8443 -j MASQUERADE
-A POSTROUTING -d 10.70.124.77/32 -p tcp -m tcp --dport 8443 -j MASQUERADE
COMMIT
